change: Use AW for debug screen profile modification